--- a/Styles/style.css
+++ b/Styles/style.css
@@ -7,6 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Mulish;
+    text-decoration: none;
 }
 .container{
     max-width: 1300px;
@@ -18,6 +19,7 @@ header{
     background-color: red; 
     height: 8vh;
     display: flex;
+
     .navFirst{
         display: flex;
         background-color: green;
@@ -27,6 +29,22 @@ header{
     }
     p{
         font-weight: bold;
+    }
+    .navSecond{
+        background-color: purple;
+        width: 70vw;
+        display: flex;
+        align-items: center;
+        a{
+            color: #008D96;
+            display: block;
+            font-weight: bold;
+            border: 1px solid;
+            padding: 10px;
+            width: 7vw;
+            border-radius: 20px;
+            
+        }
     }
   }
 }
