--- a/Styles/style.css
+++ b/Styles/style.css
@@ -16,10 +16,12 @@
     text-decoration: none;
 }
 .container{
-    max-width: 1300px;
+    max-width: 85%;
     /* background-color: black; */
     margin: 0 auto;
 }
+
+
 header{
   nav{
     /* background-color: red;  */
@@ -80,16 +82,21 @@ header{
 .sectionOne{
     background-color: green;
     display: flex;
+    
    .part1{
     background-color: red;
-    width: 50vw;
+    width: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     
+    
+    
     h1{
         font-family: Lora;
-        width: 20vw;
+        width: 24vw;
+        font-size: 50px;
+        margin-bottom: 20px;
         span{
             color:#F5AF15;
         }
