--- a/Styles/style.css
+++ b/Styles/style.css
@@ -16,11 +16,19 @@
     text-decoration: none;
 }
 .container{
-    max-width: 85%;
+    max-width: 80%;
     /* background-color: black; */
     margin: 0 auto;
 }
 
+.bgImg{
+    background-image: url(../Images/Background.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 38rem;
+
+}
 
 header{
   nav{
@@ -80,11 +88,11 @@ header{
 }
 
 .sectionOne{
-    background-color: green;
+    /* background-color: green; */
     display: flex;
     
    .part1{
-    background-color: red;
+    /* background-color: red; */
     width: 45%;
     display: flex;
     flex-direction: column;
@@ -125,5 +133,58 @@ header{
    }
    .part2{
     width: 50vw;
+    display: flex;
+    justify-content: center;
+    padding:20px;
+
+    img{
+        width: 60%;
+    }
    }
+}
+
+
+
+
+.cards{
+    display: flex;
+    flex-direction: column;
+}
+
+.cardHeader{
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.headerBtn{
+    
+    width: 45%;
+    display: flex;
+    /* justify-content: space-evenly; */
+    gap: 30px;
+
+
+    a{
+       
+        border-radius: 10px;
+        text-align: center;
+        padding:8px 20px;
+        display: block;
+        background-color: transparent;
+        color:#008D96;
+        border-color: #008D96;
+        font-weight: normal;
+        font-size: 14px;
+        transition: .7s;
+        border: 1px solid;
+        
+        
+        &:hover{
+            background-color: #008D96;
+            color:white;
+            border: 1px solid;
+        }
+    }
 }
