--- a/Styles/style.css
+++ b/Styles/style.css
@@ -158,6 +158,19 @@ header{
     justify-content: space-between;
 }
 
+
+.card{
+    background-color: red;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.cardsMenu{
+    display: flex;
+    background-color: green;
+    flex-wrap: wrap;
+}
 .headerBtn{
     
     width: 45%;
